# nerves_desktop

./: .gitignore  README.md  mix.exs
.gemini/: settings.json
.github/workflows/: build.yml
assets/: package-lock.json  package.json
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: nerves_desktop.ex  nerves_desktop_web.ex
lib/nerves_desktop/: application.ex  connection.ex  connection_supervisor.ex  device_scanner.ex  discovery.ex  fel_loader.ex  fel_scanner.ex  fwup.ex  host_info.ex  mailer.ex  nerves_key.ex  ssh_connection.ex
lib/nerves_desktop/connections/: erlang_ssh.ex  system_ssh.ex  uart.ex
lib/nerves_desktop_web/: endpoint.ex  router.ex  telemetry.ex
lib/nerves_desktop_web/components/: core_components.ex  layouts.ex  ui.ex
lib/nerves_desktop_web/components/layouts/: root.html.heex
lib/nerves_desktop_web/controllers/: error_html.ex  error_json.ex
lib/nerves_desktop_web/live/: burner_live.ex  console_live.ex  fel_live.ex  home_live.ex  nerves_key_live.ex  resources_live.ex  settings_live.ex
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/nerves_desktop_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex
